k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: rgw-s3
  name: rgw-s3
  namespace: rgw-gui
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: rgw-s3
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: rgw-s3
    spec:
      containers:
        - image: baltig.infn.it:4567/infn-cloud/webapp-rgw/webapp:latest-dev
          imagePullPolicy: Always
          name: frontend
          ports:
            - containerPort: 80
              protocol: TCP
          resources:
            requests:
              cpu: 0.5
              memory: 1G
            limits:
              cpu: 1
              memory: 2G
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        - image: baltig.infn.it:4567/infn-cloud/webapp-rgw/backend:latest-dev
          imagePullPolicy: Always
          name: backend
          ports:
            - containerPort: 8000
              protocol: TCP
          resources:
            requests:
              cpu: 0.5
              memory: 1G
            limits:
              cpu: 1
              memory: 2G
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
