k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rgw-s3
  namespace: rgw-gui
spec:
  ports:
  - port: 80
    name: frontend
  - port: 8000
    name: backend
  selector:
    app: rgw-s3
